--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,9 @@
 [submodule "roles/ansible-role-selinux"]
 	path = roles/ansible-role-selinux
 	url = https://github.com/HauptJ/ansible-role-selinux.git
+[submodule "roles/ansible-role-repo-epel"]
+	path = roles/ansible-role-repo-epel
+	url = https://github.com/HauptJ/ansible-role-repo-epel.git
+[submodule "roles/ansible-role-repo-remi"]
+	path = roles/ansible-role-repo-remi
+	url = https://github.com/HauptJ/ansible-role-repo-remi.git
